[gd_scene load_steps=3 format=3 uid="uid://egeollosyl1g"]

[ext_resource type="Script" path="res://core/node_2d.gd" id="1_ckuhj"]
[ext_resource type="Script" path="res://core/Blockchain1.gd" id="2_7r01g"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ckuhj")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainColumn" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 221.0
offset_bottom = 120.0

[node name="StatusLabel" type="Label" parent="UI/MainColumn"]
visible = false
layout_mode = 2
text = "Status: Ready"

[node name="WalletLabel" type="Label" parent="UI/MainColumn"]
layout_mode = 2
text = "Wallet: Not Connected"

[node name="ConnectWallet" type="Button" parent="UI/MainColumn"]
layout_mode = 2
text = "Connect Wallet"

[node name="AddressLabel" type="Label" parent="UI/MainColumn"]
visible = false
layout_mode = 2
text = "Address: "

[node name="BalanceLabel" type="Label" parent="UI/MainColumn"]
visible = false
layout_mode = 2
text = "Balance: --"

[node name="TransactionSection" type="VBoxContainer" parent="UI/MainColumn"]
visible = false
layout_mode = 2

[node name="TxLabel" type="Label" parent="UI/MainColumn/TransactionSection"]
layout_mode = 2
text = "Txn: "

[node name="AddressInput" type="LineEdit" parent="UI/MainColumn/TransactionSection"]
layout_mode = 2
placeholder_text = "Enter address"

[node name="AmountInput" type="LineEdit" parent="UI/MainColumn/TransactionSection"]
layout_mode = 2
placeholder_text = "Enter amount"

[node name="ControlRow" type="HBoxContainer" parent="UI/MainColumn/TransactionSection"]
layout_mode = 2

[node name="SendButton" type="Button" parent="UI/MainColumn/TransactionSection/ControlRow"]
layout_mode = 2
text = "SendButton"

[node name="Blockchain" type="Node2D" parent="."]
script = ExtResource("2_7r01g")

[connection signal="pressed" from="UI/MainColumn/ConnectWallet" to="." method="_on_connect_wallet_pressed"]
[connection signal="pressed" from="UI/MainColumn/TransactionSection/ControlRow/SendButton" to="." method="_on_send_button_pressed"]
